ver 0.22 (Driver full interface, payment page)

--- a/app/src/main/assets/requests.html
+++ b/app/src/main/assets/requests.html
@@ -17,7 +17,7 @@
             max-width: 100%;
             margin: 0 auto;
             border-collapse: collapse;
-            background-color: darkblue;
+            background-color: #011627;
         }
         th, td {
             border: 1px solid #000;
@@ -25,13 +25,13 @@
             text-align: center;
         }
         th {
-            background-color: #83b9d6;
+            background-color: #0a61a8;
         }
         tr:nth-child(even) {
             background-color: #25537c;
         }
         tr:nth-child(odd) {
-            background-color: #6670b9;
+            background-color: #99a3ee;
         }
         .accept-button, .decline-button {
             padding: 5px 10px;
