--- a/app/src/main/assets/requests.html
+++ b/app/src/main/assets/requests.html
@@ -56,34 +56,14 @@
     <table>
         <thead>
             <tr>
-                <th>Passenger Name</th>
-                <th>Location</th>
-                <th>Destination</th> 
+                <th>Passenger ID</th>
+                <th>Ride ID</th>
                 <th>Time</th>
                 <th>Action</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>Omar Alsayed</td>
-                <td>Al-Abbasia Square</td>
-                <td>Gate 3</td> 
-                <td>07:30 AM</td>
-                <td>
-                    <button class="accept-button">Accept</button>
-                    <button class="decline-button">Decline</button>
-                </td>
-            </tr>
-            <tr>
-                <td>Mohamed Ali</td>
-                <td>Gate 4</td>
-                <td>Abdu-basha square</td> 
-                <td>11:30 AM</td>
-                <td>
-                    <button class="accept-button">Accept</button>
-                    <button class="decline-button">Decline</button>
-                </td>
-            </tr>
+        <tbody id="ordersTableBody">
+            <!-- Table rows will be dynamically added here -->
         </tbody>
     </table>
 </body>
