--- a/app/src/main/assets/routs.html
+++ b/app/src/main/assets/routs.html
@@ -40,6 +40,8 @@
       padding: 8px;
       box-sizing: border-box;
       width: 100%;
+      margin-top: 10px;
+      margin-bottom: 10px;
     }
 
     #stopsContainer {
@@ -69,21 +71,18 @@
 
   <div class="container">
     <h1>Create Trip</h1>
-    <form id="tripForm">
+    <!-- Hidden div for displaying messages -->
+    <div id="messageDiv" style="display: none; color: red;"></div>
+
+    <form id="tripForm" onsubmit="return validateForm()">
       <label for="startLocation">Start Location:</label>
       <input type="text" id="startLocation" name="startLocation" required>
 
       <label for="endLocation">End Location:</label>
       <input type="text" id="endLocation" name="endLocation" required>
 
-      <div id="stopsContainer">
-        <label for="numOfStops">Number of Stops:</label>
-        <input type="number" id="numOfStops" name="numOfStops" min="0" value="0">
-        
-        <div id="stopsNames"></div>
-      </div>
-
-      <button type="button" onclick="addStopFields()">Add Stop</button>
+      <label for="seats">Seats Available:</label>
+      <input type="number" id="seats" name="seats" required>
 
       <label for="tripDate">Trip Date:</label>
       <input type="date" id="tripDate" name="tripDate" required>
@@ -99,36 +98,46 @@
   </div>
 
   <script>
-    function addStopFields() {
-      const numStops = parseInt(document.getElementById('numOfStops').value);
+    function validateForm() {
+      const startLocation = document.getElementById('startLocation').value;
+      const endLocation = document.getElementById('endLocation').value;
+      const messageDiv = document.getElementById('messageDiv');
 
-      const stopsNamesDiv = document.getElementById('stopsNames');
-      stopsNamesDiv.innerHTML = '';
+      const isStartLocationRestricted = startLocation === 'Gate3' || startLocation === 'Gate4';
+      const isEndLocationRestricted = endLocation === 'Gate3' || endLocation === 'Gate4';
 
-      for (let i = 1; i <= numStops; i++) {
-        const stopInput = document.createElement('input');
-        stopInput.type = 'text';
-        stopInput.name = `stop${i}`;
-        stopInput.placeholder = `Stop ${i} Name`;
-        stopInput.required = true;
+      // Clear previous messages
+      messageDiv.textContent = '';
 
-        stopsNamesDiv.appendChild(stopInput);
+      if ((isStartLocationRestricted && isEndLocationRestricted) ||
+          (!isStartLocationRestricted && !isEndLocationRestricted)) {
+        messageDiv.textContent = 'Start or end location should be either Gate3 or Gate4, but not both.';
+        messageDiv.style.display = 'block'; // Show the message div
+        return false; // Prevent form submission if validation fails
       }
+
+      if (startLocation.trim() === '' || endLocation.trim() === '') {
+        messageDiv.textContent = 'Please fill in all fields.';
+        messageDiv.style.display = 'block'; // Show the message div
+        return false; // Prevent form submission if validation fails
+      }
+
+      // If all validations pass, proceed with handling the data
+      handleData();
+      return false; // Prevent default form submission
     }
 
-    document.getElementById('tripForm').addEventListener('submit', function(event) {
-      event.preventDefault();
-
-      const formData = new FormData(this);
+    function handleData() {
+      // Retrieve form data and create tripData object
+      const formData = new FormData(document.getElementById('tripForm'));
       const tripData = {};
-
       for (const [key, value] of formData.entries()) {
         tripData[key] = value;
       }
 
-      console.log(tripData);
-      // Here, you can handle the collected trip data (e.g., send it to a server)
-    });
+      // Pass the data to Android function
+      AndroidInterface.handleData(JSON.stringify(tripData));
+    }
   </script>
 </body>
 </html>
